--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -15,6 +15,6 @@ jobs:
 
     steps:
       - name: "Create release"
-        uses: "ergebnis/.github/actions/github/release/create@1.8.0"
+        uses: "./.github/actions/create-release-on-tag.yaml"
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
