just for fun, create release from tag

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,7 +14,9 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
+      - uses: actions/checkout@master
+        name: Checkout
       - name: "Create release"
-        uses: "ergebnis/.github/actions/github/release/create@1.8.0"
+        uses: "./.github/actions/create-release-on-tag.yaml"
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
