--- a/.github/workflows/create-release-on-changelog-update.yml
+++ b/.github/workflows/create-release-on-changelog-update.yml
@@ -1,8 +1,9 @@
+name: "Release on push to Changelog on Master"
 
 on: # yamllint disable-line rule:truthy
   push:
     branches:
-      - main
+      - ${{ github.event.repository.default_branch }}
     paths:
       - './CHANGELOG.md'
 
