--- a/.github/actions/create-release-on-changelog-change/action.yaml
+++ b/.github/actions/create-release-on-changelog-change/action.yaml
@@ -20,7 +20,7 @@ runs:
       env:
         GITHUB_TOKEN: ${{ inputs.github-token }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ steps.get_max_versions.outputs.max-version }}
-        release_name: v${{ steps.get_max_versions.outputs.max-version }}
+        tag_name: ${{ steps.get_max_version.outputs.max-version }}
+        release_name: ${{ steps.get_max_version.outputs.max-version }}
         draft: false
         prerelease: false
