Revert "push changelog"
This reverts commit 47b1a24598e5244e5016e6c384883fe13f32e0d3.

--- a/.github/actions/create-release-on-changelog-change/action.yaml
+++ b/.github/actions/create-release-on-changelog-change/action.yaml
@@ -22,5 +22,6 @@ runs:
       with:
         tag_name: ${{ steps.get_max_versions.outputs.max-version }}
         release_name: v${{ steps.get_max_versions.outputs.max-version }}
+        generate_release_notes: true
         draft: false
         prerelease: false
