Revert "push changelog"
This reverts commit 42706f7132645691369ab6673c0dc8fa0996a719.

--- a/.github/workflows/create-release-on-changelog-update.yml
+++ b/.github/workflows/create-release-on-changelog-update.yml
@@ -3,7 +3,7 @@ name: "Release on push to Changelog on Master"
 on: # yamllint disable-line rule:truthy
   push:
     branches:
-      - 'master'
+      - ${{ github.event.repository.default_branch }}
     paths:
       - './CHANGELOG.md'
 
