--- a/.github/workflows/create-release-on-changelog-update.yml
+++ b/.github/workflows/create-release-on-changelog-update.yml
@@ -1,9 +1,8 @@
-name: "Release on push to Changelog on Master"
 
 on: # yamllint disable-line rule:truthy
   push:
     branches:
-      - ${{ github.event.repository.default_branch }}
+      - main
     paths:
       - './CHANGELOG.md'
 
