--- a/.github/workflows/create-release-on-changelog-update.yml
+++ b/.github/workflows/create-release-on-changelog-update.yml
@@ -4,8 +4,8 @@ on: # yamllint disable-line rule:truthy
   push:
     branches:
       - 'master'
-#    paths:
-#      - './CHANGELOG.md'
+    paths:
+      - './CHANGELOG.md'
 
 jobs:
   release:
