Revert "just for fun, create release from tag"
This reverts commit 293036ad553bcd769d08c6c57757dbf4dbe4c86b.

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,9 +14,7 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: actions/checkout@master
-        name: Checkout
       - name: "Create release"
-        uses: "./.github/actions/create-release-on-tag"
+        uses: "ergebnis/.github/actions/github/release/create@1.8.0"
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
