--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 quarkus.datasource.db-kind=other
-quarkus.datasource.jdbc.url=jdbc:cloudspanner:/projects/halogen-honor-403909/instances/quarkus-quickstart-spanner/databases/quarkus-quickstart-sample-db
+quarkus.datasource.jdbc.url=jdbc:cloudspanner:/projects/${PROJECT_ID}/instances/quarkus-quickstart-spanner/databases/quarkus-quickstart-sample-db
 quarkus.datasource.jdbc.driver=com.google.cloud.spanner.jdbc.JdbcDriver
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.SpannerDialect
